Small fix, text-align: center

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 15px;
     border-radius: 5px;
     background: #eee;
+    text-align: center;
 }
 
 #title {
